# bombletu

./: .env.example  .gitignore  adapt.py  agent.py  apimux.py  app.py  components.py  config.py  cqface.py  docker-compose.yml  graph.py  main.py  msgfmt.py  pyproject.toml  tools.py  utils.py
agenting/: __init__.py  contexting.py  graph.py  memorying.py  prompts.py  summarization.py  tools.py  types.py
applet/: __init__.py  base.py  mcp.py
oicq/: applet.py  events.py  globl.py  mcp.py  msgfmt.py  status.py  tools.py
