[project]
name = "bombletu"
version = "0.1.0"
description = "Someone tell @tumbleweed there is a problem with my AI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "aiosqlite>=0.21.0",
    "asyncio>=4.0.0",
    "asyncio-channel>=0.9.1",
    "deepagents>=0.2.7",
    "duckduckgo-search>=8.1.1",
    "jsonschema>=4.25.1",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.1",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "langfuse>=3.10.1",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-cli[inmem]>=0.4.5",
    "mem0ai>=1.0.1",
    "ncatbot>=4.2.9",
    "ndjson>=0.3.1",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-alconna>=0.60.2",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-chatrecorder>=0.7.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-send-anything-anywhere>=0.7.1",
    "nonebot-plugin-uninfo>=0.10.0",
    "nonebot2[all]>=2.4.3",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
]
