[project]
name = "bombletu"
version = "0.1.0"
description = "Someone tell @tumbleweed there is a problem with my AI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncio>=4.0.0",
    "asyncio-channel>=0.9.1",
    "deepagents>=0.2.8",
    "fastapi>=0.127.0",
    "jsonschema>=4.25.1",
    "langchain>=1.1.2",
    "langchain-anthropic>=1.2.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langfuse>=3.10.5",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-cli[inmem]>=0.4.7",
    "lru-dict>=1.4.1",
    "ncatbot>=4.4.1",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "shortuuid>=1.0.13",
]
